--- a/exercicios/pubspec.yaml
+++ b/exercicios/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
     
   google_fonts: ^2.3.1
+  mask_text_input_formatter: ^2.1.0
+  geolocator: ^8.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
