--- a/exercicios/pubspec.yaml
+++ b/exercicios/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_fonts: ^2.3.1
   mask_text_input_formatter: ^2.1.0
   geolocator: ^8.2.0
+  flutter_bloc: ^8.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
