--- a/exercise_animation/pubspec.yaml
+++ b/exercise_animation/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^1.3.0
+  mobx:
+  flutter_mobx:
 
 dev_dependencies:
   flutter_test:
